# plotty

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/plotty/: matplotlibcpp.hpp
src/: matplotlibcpp.cpp  mpl_example_node.cpp
