<?xml version="1.0"?>
<package format="2">
  <name>plotty</name>
  <version>0.1.4</version>
  <description>The plotty package.
     Copied from https://github.com/zurich-eye/ze_oss/tree/master/ze_matplotlib
     and removed all the dependencies.
   </description>

  <maintainer email="michael.burri@mavt.ethz.ch">Michael Burri</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>PythonLibs</depend>

<test_depend>gtest</test_depend>
</package>
